--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   ],
   "dependencies": {
     "babel-eslint": "8.2.2",
-    "eslint": "4.18.2",
+    "eslint": "^6.8.0",
     "eslint-config-standard": "11.0.0",
     "eslint-config-standard-jsx": "5.0.0",
     "eslint-config-standard-react": "6.0.0",
-    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "6.0.1",
     "eslint-plugin-promise": "3.7.0",
-    "eslint-plugin-react": "7.7.0",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "3.0.1"
   },
   "repository": {
