--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eslint-config-jonnybuchanan",
+  "name": "@ksakira10/eslint-config-jonnybuchanan",
   "description": "Personal eslint config, with dependencies",
-  "version": "6.0.0",
+  "version": "6.0.1",
   "license": "MIT",
   "author": "Jonny Buchanan <jonathan.buchanan@gmail.com>",
   "bin": {
@@ -15,16 +15,16 @@
     ".eslintrc"
   ],
   "dependencies": {
-    "babel-eslint": "8.2.2",
+    "babel-eslint": "^8.2.2",
     "eslint": "^6.8.0",
-    "eslint-config-standard": "11.0.0",
-    "eslint-config-standard-jsx": "5.0.0",
-    "eslint-config-standard-react": "6.0.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-jsx": "^5.0.0",
+    "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "6.0.1",
-    "eslint-plugin-promise": "3.7.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-standard": "3.0.1"
+    "eslint-plugin-standard": "^3.0.1"
   },
   "repository": {
     "type": "git",
